--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <ul>
           <li>
             <article>
-              <!-- <h3>картинка1</h3> -->
+              <!-- картинка1 -->
               <p>
                 Всі наші косметологи мають вищу медичну освіту та стаж роботи
                 від 5 років
@@ -75,7 +75,7 @@
           </li>
           <li>
             <article>
-              <!-- <h3>картинка2</h3> -->
+              <!-- картинка2 -->
               <p>
                 Використовуємо тільки професійне обладнання та косметику,
                 перевірену часом
