--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beauty Zone</title>
+
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="#">
+        <a href="./index.html">
           <img src="./images/logo.svg" alt="Логотип Beauty Zone" />
         </a>
         <ul>
-          <li><a href="#">Про нас</a></li>
-          <li><a href="#">Чому ми</a></li>
-          <li><a href="#">Наші процедури</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li><a class="link" href="#about-us-section">Про нас</a></li>
+          <li><a class="link" href="#why-us-section">Чому ми</a></li>
+          <li><a class="link" href="#procedures-section">Наші процедури</a></li>
+          <li><a class="link" href="#contacts-section">Контакти</a></li>
         </ul>
       </nav>
       <ul>
@@ -40,34 +42,43 @@
 
     <main>
       <section>
-        <h1 lang="en">Beauty Zone</h1>
-        <button type="button">Замовити дзвінок</button>
-        <p>Запишись та отримай безкоштовну консультацію нашого косметолога</p>
+        <h4>Косметологічна клініка</h4>
+        <h1 lang="en" class="hero-title">Beauty Zone</h1>
+        <button class="button-order" type="button">Замовити дзвінок</button>
+        <p class="text-1section">
+          Запишись та отримай безкоштовну консультацію нашого косметолога
+        </p>
       </section>
-      <section>
-        <h2 lang="en">Перевтілюйтесь в Beauty Zone!</h2>
-        <p>
+      <section id="about-us-section">
+        <h2 class="header-2-text" lang="en">
+          Перевтілюйтесь в
+          <span class="accent" lang="en">Beauty Zone!</span>
+        </h2>
+        <p class="text">
           Наша косметологічна клініка пропонує вам професійні послуги з догляду
           за шкірою обличчя та тіла.
         </p>
-        <p>
-          B <span lang="en">Beauty Zone</span> ми гарантуємо найвищі стандарти
-          якості та приємний сервіс. Наші косметологічні процедури та препарати
-          допоможуть вам підтримувати свою красу та молодість. З нами краса
-          назавжди!
+        <p class="text">
+          B <span class="fat-text" lang="en">Beauty Zone</span> ми гарантуємо
+          найвищі стандарти якості та приємний сервіс. Наші косметологічні
+          процедури та препарати допоможуть вам підтримувати свою красу та
+          молодість.<br />
+          З нами краса назавжди!
         </p>
         <img
           src="./images/Face-after-before.jpg"
           alt="Обличчя до і після процедури"
         />
       </section>
-      <section>
-        <h2>Чому люди обирають нас</h2>
+      <section id="why-us-section">
+        <h2 class="header-2-text">
+          Чому люди <span class="accent">обирають нас</span>
+        </h2>
         <ul>
           <li>
             <article>
               <!-- картинка1 -->
-              <p>
+              <p class="text-3-section">
                 Всі наші косметологи мають вищу медичну освіту та стаж роботи
                 від 5 років
               </p>
@@ -76,7 +87,7 @@
           <li>
             <article>
               <!-- картинка2 -->
-              <p>
+              <p class="text-3-section">
                 Використовуємо тільки професійне обладнання та косметику,
                 перевірену часом
               </p>
@@ -84,8 +95,8 @@
           </li>
           <li>
             <article>
-              <!-- <h3>картинка3</h3> -->
-              <p>
+              <!-- картинка3 -->
+              <p class="text-3-section">
                 Наша мета - підкреслити переваги та приховати недоліки, а не
                 переробити
               </p>
@@ -93,13 +104,15 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Наші процедури</h2>
+      <section id="procedures-section">
+        <h2 class="header-2-text">
+          Наші <span class="accent">процедури</span>
+        </h2>
         <ul>
           <li>
             <article>
               <!-- картинка1 -->
-              <h3>Маски для обличчя</h3>
+              <h3 class="header-3-text">Маски для обличчя</h3>
             </article>
           </li>
           <li>
@@ -114,21 +127,32 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Як нас знайти</h2>
+      <section id="contacts-section">
+        <h2 class="header-2-text">
+          Як нас <span class="accent"> знайти</span>
+        </h2>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.476433533146!2d30.520421799999998!3d50.45085220000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce50851426df%3A0x58296d35bd78df01!2z0L_RgNC-0LLRg9C70L7QuiDQotCw0YDQsNGB0LAg0KjQtdCy0YfQtdC90LrQsCwgNSwg0JrQuNGX0LIsIDAyMDAw!5e0!3m2!1suk!2sua!4v1762110105920!5m2!1suk!2sua"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
       </section>
     </main>
 
     <footer>
       <nav>
-        <a href="#">
+        <a href="./index.html">
           <img src="./images/logo.svg" alt="Логотип Beauty Zone" />
         </a>
         <ul>
-          <li><a href="#">Про нас</a></li>
-          <li><a href="#">Чому ми</a></li>
-          <li><a href="#">Наші процедури</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li><a class="link" href="#about-us-section">Про нас</a></li>
+          <li><a class="link" href="#why-us-section">Чому ми</a></li>
+          <li><a class="link" href="#procedures-section">Наші процедури</a></li>
+          <li><a class="link" href="#contacts-section">Контакти</a></li>
         </ul>
       </nav>
       <address>
@@ -159,9 +183,8 @@
           </li>
         </ul>
         <a href="#" target="_blank">Політика конфіденційності</a>
-        <p>© 2022 Дані захищені</p>
+        <p>&copy; 2022 Дані захищені</p>
       </address>
     </footer>
   </body>
 </html>
-<!-- test -->
