update css and html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </header>
 
     <main>
-      <!-- HERO -->
+      <!-- HERO g-->
       <section class="hero-section">
         <div class="hero-overlay"></div>
 
